Fix responsive on mobile issue

--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -41,10 +41,9 @@
   list-style: none;
   padding: 0;
   margin: 0;
-
+  
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(420px, 1fr));
-  gap: 20px;
+  gap: 0;
 }
 
 .project-item {
